Fix overflow issue

--- a/demo/parallax-scroller.css
+++ b/demo/parallax-scroller.css
@@ -4,7 +4,7 @@
 }
 
 .ps-native {
-  overflow: auto;
+  overflow: visible;
   max-height: none;
 }
 
